commented the scripts file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Pizza Time</title>
   </head>
   <body>
-    This is proof that the page is existant and just about it.
+    <div class="container">
+
+    </div> <!-- class = container -->
   </body>
 </html>
