--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Total: $452.05</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Items: 5</a>
+          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -47,17 +53,80 @@
       </div>
     </nav>
     <div class="body">
-      <div class="card">
-        <div class="card-header">
+      <div class="row">
+        <div class="col-md-9">
 
-        </div> <!-- class = card-header -->
-        <div class="card-body">
+          <div class="card"> <!-- display a deal of some kind! -->
+            <div class="card-body">
+              <img src="https://media.istockphoto.com/photos/concept-promotional-flyer-and-poster-for-restaurants-or-pizzerias-picture-id943449226?k=6&m=943449226&s=612x612&w=0&h=vZfDYiqWu3sL_edqrQeoRNmSTbhydLptBVTMyekTxqU=" class="card-img-top">
+            </div> <!-- class = card-body -->
+          </div> <!-- class = card -->
+          <div class="card-group">
+            <div class="card">
+              <div class="card-header">
+                <h2>About us</h2>
+              </div> <!-- class = card-header -->
+              <div class="card-body">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Founded in 1502</li>
+                  <li class="list-group-item">Moved to America with the initial colonists</li>
+                  <li class="list-group-item">Singlehandedly funded all of World War 2 through income taxes</li>
+                </ul> <!-- class = list-group list-group-flush -->
+              </div> <!-- class = card-body -->
+            </div><!-- class = card -->
+            <div class="card">
+              <div class="card-header">
+                <h2>Our Menu</h2>
+              </div>
+              <div class="card-body">
+                <h4> Crusts </h4>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Traditional</li>
+                  <li class="list-group-item">Stuffed Crust</li>
+                  <li class="list-group-item">Gluten Free</li>
+                </ul> <!-- class = list-group list-group-flush -->
+                <h4> Sauces </h4>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Tomato and Basil Sauce</li>
+                  <li class="list-group-item">Barbeque Sauce</li>
+                  <li class="list-group-item">Alfredo Sauce</li>
+                </ul> <!-- class = list-group list-group-flush -->
+                <h4> Cheeses </h4>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Cheddar</li>
+                  <li class="list-group-item">Mozzarella</li>
+                  <li class="list-group-item">Parmesan Regannio</li>
+                </ul> <!-- class = list-group list-group-flush -->
+                <h4> Toppings </h4>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Pepperoni</li>
+                  <li class="list-group-item">Metal Scraps</li>
+                  <li class="list-group-item">Oreo Cookies</li>
+                </ul> <!-- class = list-group list-group-flush -->
+              </div> <!-- class = card-body -->
+            </div> <!-- class = card -->
+          </div> <!-- class="card-group" -->
+          <div class="card">
+            <div class="card-body">
 
-        </div> <!-- class = card-body -->
-        <div class="card-footer">
+            </div> <!-- class = card-body -->
+          </div> <!-- class = card -->
+        </div> <!-- class = col-md-9 -->
+        <div class="col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center"><h2>PIZZA</li>
+                <li class="list-group-item"><a href="#">Order</a></li>
+                <li class="list-group-item"><a href="#">Shopping Cart</a></li>
+                <li class="list-group-item"><a href="#">Checkout</a></li>
+                <li class="list-group-item"><a href="#">Find A Store</a></li>
+              </ul> <!-- class= list-group list-group-flush -->
+            </div> <!-- class = card-body -->
+          </div> <!-- class = card -->
+        </div> <!-- class = col-md-3 -->
+      </div> <!-- class = row -->
 
-        </div> <!-- class = card-footer -->
-      </div> <!-- class = card -->
     </div> <!-- class = body -->
   </div> <!-- class = container -->
 </body>
