updated javascript to print out toppings to user

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               Items: 0
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="pizzas">
-
+              <p class="dropdown-item">Your Cart is Empty!</p>
             </div>
           </li>
         </ul>
