--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
                       <option>Three Cheese Blend (+$3)</option>
                     </select>
                   </ul> <!-- class = list-group list-group-flush -->
-                  <h4> Toppings </h4>
+                  <h4> Toppings</h4>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><input type="checkbox" id="topping0" name="topping0" value=0> Pepperoni</li>
-                    <li class="list-group-item"><input type="checkbox" id="topping1" name="topping1" value=1> Mushrooms</li>
-                      <li class="list-group-item"><input type="checkbox" id="topping2" name="topping2" value=2> Bacon</li>
-                    <li class="list-group-item"><input type="checkbox" id="topping3" name="topping3" value=3> Pineapple</li>
+                    <li class="list-group-item"><input type="checkbox" id="topping0" name="topping0" value=0> Pepperoni (+$2)</li>
+                    <li class="list-group-item"><input type="checkbox" id="topping1" name="topping1" value=1> Mushrooms (+$2)</li>
+                      <li class="list-group-item"><input type="checkbox" id="topping2" name="topping2" value=2> Bacon (+$2)</li>
+                    <li class="list-group-item"><input type="checkbox" id="topping3" name="topping3" value=3> Pineapple (+$2)</li>
                   </ul> <!-- class = list-group list-group-flush -->
                   <button type="submit" class="btn btn-warning text-center">Add to Cart</button>
                 </form>
